--- a/source_code/ids-server/ClientApp/src/index.html
+++ b/source_code/ids-server/ClientApp/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.15.1/css/pro.min.css" />
 </head>
-<body>
+<body class="dark">
   <app-root></app-root>
 </body>
 </html>
